--- a/Task 1/index.html
+++ b/Task 1/index.html
@@ -11,7 +11,7 @@
       src="https://kit.fontawesome.com/9484e9fcdb.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="shortcut icon" href="Assets/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <title>Travelmania | The one stop travel destination</title>
   </head>
@@ -19,7 +19,7 @@
     <div class="container">
       <nav>
         <div class="nav__logo">
-          <img src="Assets/logo.png" alt="logo" />
+          <img src="logo.png" alt="logo" />
         </div>
         <ul class="nav__links">
           <li class="link"><a href>Home</a></li>
@@ -37,7 +37,7 @@
         </div>
       </nav>
       <div class="destination__container">
-        <img class="bg__img__1" src="Assets/bg-arrow.png" alt="bg" />
+        <img class="bg__img__1" src="bg-arrow.png" alt="bg" />
         <div class="socials">
           <span><i class="ri-twitter-fill"></i></span>
           <span><i class="ri-facebook-fill"></i></span>
@@ -55,7 +55,7 @@
         </div>
         <div class="destination__grid">
           <div class="destination__card">
-            <img src="Assets/destination1.jpg" alt="destination" />
+            <img src="destination1.jpg" alt="destination" />
             <div class="card__content">
               <h4>10 Must-Visit Hidden Gems</h4>
               <p>
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="destination__card">
-            <img src="Assets/destination2.jpg" alt="destination" />
+            <img src="destination2.jpg" alt="destination" />
             <div class="card__content">
               <h4>Immersive Cultural Experiences</h4>
               <p>
@@ -78,7 +78,7 @@
             </div>
           </div>
           <div class="destination__card">
-            <img src="Assets/destination3.jpg" alt="destination" />
+            <img src="destination3.jpg" alt="destination" />
             <div class="card__content">
               <h4>From Dreams to Reality</h4>
               <p>
